--- a/scss/style.css
+++ b/scss/style.css
@@ -131,7 +131,7 @@ body {
           justify-content: space-between;
   max-width: 600px;
   width: 100%;
-  max-height: 150px;
+  max-height: 250px;
   height: 100%;
 }
 
@@ -214,9 +214,17 @@ body {
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .mainContainer .btnContainer button {
+  margin: 10px;
   width: 250px;
   height: 50px;
   border-radius: 10px;
