--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,7 +97,7 @@ body{
     justify-content: space-between;
     max-width: 600px;
     width: 100%;
-    max-height: 150px;
+    max-height: 250px;
     height: 100%;
 
     
@@ -153,7 +153,10 @@ body{
     }
     .btnContainer{
         order: 1;
+        display: flex;
+        flex-direction: column;
        button{
+           margin: 10px;
            width: 250px;
            height: 50px;
            border-radius: 10px;
