--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,11 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Lato', sans-serif;
-    
+
+        @media(max-width: 415px){
+            justify-content: space-evenly;;
+        }
+
    
 }
 .clockContainer{
@@ -20,6 +24,7 @@ body{
     // border: 1px solid black;
     display: flex;
     @media(max-width: 415px){
+        margin-top: 9vh;
         max-width: 40vh;
         width: 100%;
         max-height: 40vh;
@@ -28,8 +33,10 @@ body{
     .clock{
         width: 100%;
         height: 100%;
-        border: 1px solid gray;
         border-radius: 50%;
+        border: 1px dashed gray;
+       
+
         img{
             width: 100%;
         }
@@ -101,13 +108,15 @@ body{
     height: 100%;
 
     @media(max-width: 415px){
-        margin-top: 2vh;
+        margin-bottom: 25vh;
+
     }
     .inputContainer{
         width: 100%;
         display: flex;
         justify-content: space-between;
         @media(max-width: 415px){
+
             align-items: center;
             // border: red 1px solid;
             order: 2;
@@ -115,6 +124,7 @@ body{
         }
        
         input[type=number]{
+            -webkit-appearance: none;
             border: none;
             border: 1px solid gray;
             border-radius: 5px;
@@ -123,6 +133,7 @@ body{
             width: 100%;
             height: 35px;
             @media(max-width: 415px){
+
                 width: 25%;
                 height: 50px;
                 margin-left: 3%;
@@ -144,6 +155,7 @@ body{
             text-align: center;
             transition: 3s;
             @media(max-width: 415px){
+
                 margin-bottom: 1vh;
             }
         }
@@ -160,6 +172,7 @@ body{
         @media(max-width: 415px){
             flex-direction: column;
             align-items: center;
+
         }
        button{
            margin-left: 10px;
@@ -176,6 +189,7 @@ body{
            font-size: 20px;
            @media(max-width: 415px){
             margin-top: 1vh;
+            
         }
         
         }
