--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Lato', sans-serif;
+    // background-color: rgba(37, 37, 37, 0.918);
 
         @media(max-width: 415px){
             justify-content: space-evenly;;
@@ -30,36 +31,153 @@ body{
         max-height: 40vh;
         height: 100%;
     }
+    .underClock{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        box-shadow: -5px 3px 1px rgb(95, 92, 92);
+        border-radius: 50%;
+        width: 420px;
+        height: 420px;
+        background-color: rgb(31, 29, 29);
+        z-index: -99999;
+    }
     .clock{
         width: 100%;
         height: 100%;
         border-radius: 50%;
-        border: 1px dashed gray;
-       
+        background-color: rgb(255, 255, 255);
+        // border: 20px solid rgb(86, 228, 67);
+      
+        
+        box-sizing: border-box;
+        position: relative;
+        box-shadow: 
+        inset 20px 50px 100px rgba(0,0,0,.2),
+        inset 5px 10px 60px rgba(0,0,0,.5);
+        
+        .digitalFrame{
+            position: absolute;
+            top: 50%;
+            left: 20%;
+            transform: translateY(-50%);
+            border: 1px solid rgb(38, 43, 48);
+            box-shadow: 
+            inset 1px 1px 1px rgba(0,0,0,.2),
+            inset 1px 1px 6px rgba(0,0,0,.5);
+            border-radius: 5px;
+            .digital{
+                font-size: 19px;
+            }
+
+        }
+        .logo{
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        ul{
+            list-style: none;
+            padding: 0;
+        }
+        li{
+            position: absolute;
+           
+            text-align: center;
+            line-height: 20px;
+            // color:white;
+            font-size: 30px;
+            transition: .3s linear;
+        }
+        li:nth-child(1){
+            right: 26%;
+            top:10%;
+        }
+        li:nth-child(2){
+            right: 10%;
+            top:26%;
+        }
+        li:nth-child(3){
+            right: 5%;
+            top: 50%;
+            transform: translateY(-50%);    
+        }
+        li:nth-child(4){
+            right: 10%;
+            top:69%;
+        }
+        li:nth-child(5){
+            right: 26%;
+            top: 85%;
+        }
+        li:nth-child(6){
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 5%;
+        }
+        li:nth-child(7){
+            left: 26%;
+            top:85%;
+        }
+        li:nth-child(8){
+            left: 10%;
+            top:69%;
+        }
+        li:nth-child(9){
+            left: 5%;
+            top: 50%;
+            transform: translateY(-50%);  
+        }
+        li:nth-child(10){
+            left: 10%;
+            top:26%;
+        }
+        li:nth-child(11){
+            left: 26%;
+            top:10%;
+        }
+        li:nth-child(12){
+            left: 50%;
+            transform: translateX(-50%);
+            top: 5%;
+        }
+        .onRed{
+            color: red;
+            font-size: 40px;
+        }
+        .onBlack{
+            color: black;
+            font-size: 40px;
+        }
+
 
         img{
             width: 100%;
+            height: 100%;
+            border-radius: 50%;
         }
         .circle{
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            width: 15px;
-            height: 15px;
+            width: 18px;
+            height: 18px;
             border-radius: 50%;
-            background-color: black;
+            background-color: rgb(38, 43, 48);
             z-index: 4;
         }
         .sekunda{
             position: absolute;
-            top: 10%;
+            top: 15%;
             left: 50%;
-            background-color: red;
+            background-color: rgb(255, 0, 0);
             width: 3px;
-            height: 40%;
+            height: 35%;
             transform-origin: 50% 100%;
-            border-radius: 10px 10px;
+            border-radius: 30% 30% 0 0;
             transform: rotate(0deg);
             transition: .3s linear;      
             z-index: 3;
@@ -67,33 +185,34 @@ body{
         }
         .minuta{
             position: absolute;
-            top: 10%;
+            top: 20%;
             left: 50%;
-            background-color:rgb(22, 20, 20);
-            width: 5px;
-            height: 40%;
+            background-color:rgb(62, 67, 71);
+            width: 3px;
+            height: 30%;
             transform-origin: 50% 100%;
             transform: rotate(0deg);
             transition: .6s linear;
-            border-radius: 10px 10px;
+            border-radius: 30% 30% 0 0;
             z-index: 1;
 
         }
         .godzina{
             position: absolute;
-            top: 20%;
+            top: 25%;
             left: 50%;
-            background-color: gray;
-            width: 5px;
-            height: 30%;
+            background-color: rgb(62, 67, 71);
+            width: 3px;
+            height: 25%;
             transform-origin: 50% 100%;
-            border-radius: 10px 10px;
+            border-radius: 30% 30% 0 0;
             transform: rotate(0deg);
             transition: .9s linear;   
             z-index: 2;
    
 
         }
+        
     }
 }
 .mainContainer{
@@ -150,6 +269,8 @@ body{
         font-size: 20px;
         span{
             // display: none;
+            cursor: pointer;
+            color: gray;
             max-width: 150px;
             width: 100%;
             text-align: center;
