--- a/scss/style.css
+++ b/scss/style.css
@@ -17,6 +17,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Lato', sans-serif;
+  background-color: #fafafa;
 }
 
 @media (max-width: 415px) {
@@ -29,9 +30,9 @@ body {
 
 .clockContainer {
   position: relative;
-  max-width: 400px;
+  max-width: 350px;
   width: 100%;
-  max-height: 400px;
+  max-height: 350px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -54,12 +55,10 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-box-shadow: -5px 3px 1px #5f5c5c;
-          box-shadow: -5px 3px 1px #5f5c5c;
   border-radius: 50%;
-  width: 420px;
-  height: 420px;
-  background-color: #1f1d1d;
+  width: 370px;
+  height: 370px;
+  background-color: black;
   z-index: -99999;
 }
 
@@ -283,9 +282,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 600px;
+  max-width: 500px;
   width: 100%;
-  max-height: 150px;
+  max-height: 125px;
   height: 100%;
 }
 
@@ -320,10 +319,11 @@ body {
 .mainContainer .inputContainer input[type=number] {
   -webkit-appearance: none;
   border: none;
-  border: 1px solid gray;
-  border-radius: 5px;
+  background-color: transparent;
+  border-bottom: 1px solid gray;
   text-align: center;
-  max-width: 150px;
+  outline: none;
+  max-width: 125px;
   width: 100%;
   height: 35px;
 }
@@ -338,40 +338,17 @@ body {
 }
 
 .mainContainer .spanContainer {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 20px;
-}
-
-.mainContainer .spanContainer span {
   cursor: pointer;
-  color: gray;
-  max-width: 150px;
-  width: 100%;
-  text-align: center;
-  -webkit-transition: 3s;
-  transition: 3s;
-}
-
-@media (max-width: 415px) {
-  .mainContainer .spanContainer span {
-    margin-bottom: 1vh;
-  }
-}
-
-.mainContainer .spanContainer span.clicked {
-  display: block;
 }
 
 .mainContainer .btnContainer {
+  width: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 @media (max-width: 415px) {
@@ -387,18 +364,17 @@ body {
 }
 
 .mainContainer .btnContainer button {
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 250px;
+  width: 220px;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 15px;
   background: none;
   border: 1px solid gray;
   cursor: pointer;
+  outline: none;
   color: gray;
   -webkit-transition: .3s linear;
   transition: .3s linear;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 @media (max-width: 415px) {
