--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Lato', sans-serif;
-    // background-color: rgba(37, 37, 37, 0.918);
+    background-color: rgb(250, 250, 250);
 
         @media(max-width: 415px){
             justify-content: space-evenly;;
@@ -18,9 +18,9 @@ body{
 }
 .clockContainer{
     position: relative;
-    max-width: 400px;
+    max-width: 350px;
     width: 100%;
-    max-height: 400px;
+    max-height: 350px;
     height: 100%;
     // border: 1px solid black;
     display: flex;
@@ -36,11 +36,11 @@ body{
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        box-shadow: -5px 3px 1px rgb(95, 92, 92);
+        // box-shadow: -5px 3px 1px rgb(95, 92, 92);
         border-radius: 50%;
-        width: 420px;
-        height: 420px;
-        background-color: rgb(31, 29, 29);
+        width: 370px;
+        height: 370px;
+        background-color: rgb(0, 0, 0);
         z-index: -99999;
         @media(max-width: 415px){
             max-width: 42vh;
@@ -226,11 +226,11 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    max-width: 600px;
+    max-width: 500px;
     width: 100%;
-    max-height: 150px;
+    max-height: 125px;
     height: 100%;
-
+    // border: 1px solid black;
     @media(max-width: 415px){
         margin-bottom: 25vh;
 
@@ -250,12 +250,17 @@ body{
         input[type=number]{
             -webkit-appearance: none;
             border: none;
-            border: 1px solid gray;
-            border-radius: 5px;
+            // border: 1px solid gray;
+            // border-radius: 5px;
+            background-color: transparent;
+            border-bottom: 1px solid gray;
             text-align: center;
-            max-width: 150px;
+            outline: none;
+            max-width: 125px;
             width: 100%;
             height: 35px;
+            
+
             @media(max-width: 415px){
 
                 width: 25%;
@@ -268,51 +273,33 @@ body{
         
     }
     .spanContainer{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        font-size: 20px;
-        span{
-            // display: none;
-            cursor: pointer;
-            color: gray;
-            max-width: 150px;
-            width: 100%;
-            text-align: center;
-            transition: 3s;
-            @media(max-width: 415px){
-
-                margin-bottom: 1vh;
-            }
-        }
-        span.clicked{
-            display: block;
-            @media(max-width: 415px){
-                // display: none;
-            }
-        }
+        cursor: pointer;
     }
     .btnContainer{
+        // border: 1px solid red;
+        width: 500px;
         // order: 1;
         display: flex;
+        justify-content: space-between;
         @media(max-width: 415px){
             flex-direction: column;
             align-items: center;
 
         }
        button{
-           margin-left: 10px;
-           margin-right: 10px;
+        //    margin-left: 10px;
+        //    margin-right: 10px;
 
-           width: 250px;
+           width: 220px;
            height: 50px;
-           border-radius: 10px;
+           border-radius: 15px;
            background: none;
            border: 1px solid gray;
            cursor: pointer;
+           outline: none;
            color: gray;
            transition: .3s linear;
-           font-size: 20px;
+           font-size: 16px;
            @media(max-width: 415px){
             margin-top: 1vh;
             
