--- a/scss/style.scss
+++ b/scss/style.scss
@@ -184,7 +184,7 @@ body{
             transform-origin: 50% 100%;
             border-radius: 30% 30% 0 0;
             transform: rotate(0deg);
-            transition: .3s linear;      
+            transition: 1s linear;      
             z-index: 3;
 
         }
@@ -197,7 +197,7 @@ body{
             height: 30%;
             transform-origin: 50% 100%;
             transform: rotate(0deg);
-            transition: .6s linear;
+            transition: 1s linear;
             border-radius: 30% 30% 0 0;
             z-index: 1;
 
@@ -212,7 +212,7 @@ body{
             transform-origin: 50% 100%;
             border-radius: 30% 30% 0 0;
             transform: rotate(0deg);
-            transition: .9s linear;   
+            transition: 1s linear;   
             z-index: 2;
    
 
